--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,18 @@ version: '2'
 services:
 
   web:
-    build: .
+    build:
+      context: '.'
     ports:
       - "80:8080"
     depends_on:
       - mongo
     networks:
       - all
+    links:
+      - mongo
     environment:
-      MONGODB_URI: "mongodb://mongo:27017/test"
+      MONGODB_URI: ${MONGODB_URI}
 
   mongo:
     image: mongo
