--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node server.js --ignore public/",
-    "dev": "webpack -wd"
+    "dev": "webpack -wd",
+    "build": "webpack --config webpack.config.js && npm start"
   },
   "author": "Ethan Haynes",
   "license": "MIT",
@@ -18,7 +19,8 @@
     "mongodb": "^2.2.16",
     "node-sass-middleware": "^0.10.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "webpack": "^1.14.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
