--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node server.js --ignore public/",
+    "start": "webpack --config webpack.config.js && node loadTestData && nodemon --exec babel-node server.js --ignore public/",
     "dev": "webpack -wd",
     "build": "webpack --config webpack.config.js && npm start"
   },
